[gd_scene load_steps=31 format=3 uid="uid://c4byhk0u6gh5v"]

[ext_resource type="FontFile" uid="uid://dk7xxcpv0l3gl" path="res://assets/fonts/Ultra-Regular.ttf" id="1_s3xu5"]
[ext_resource type="Script" path="res://scripts/MainHub.gd" id="1_svit3"]
[ext_resource type="Theme" uid="uid://ncsyvbfrm621" path="res://SecondaryButtonTheme.tres" id="4_pb4yn"]
[ext_resource type="Theme" uid="uid://5hj6pfvbsvck" path="res://ActionButtonTheme.tres" id="4_yfthd"]
[ext_resource type="Theme" uid="uid://bn8qmtgx536mm" path="res://scenes/ChipLabels.tres" id="5_utarw"]
[ext_resource type="Theme" uid="uid://dreys20ea1gmc" path="res://TertiaryTheme.tres" id="6_4fhbl"]
[ext_resource type="PackedScene" uid="uid://dhyb7q1k4sgv3" path="res://scenes/AvatarScene.tscn" id="6_fa6iq"]
[ext_resource type="PackedScene" uid="uid://ccrvthber456w" path="res://scenes/GamePanel.tscn" id="7_3mdhe"]
[ext_resource type="FontFile" uid="uid://dbcd7i33fwcir" path="res://assets/fonts/Inter_28pt-Thin.ttf" id="7_30cts"]
[ext_resource type="Texture2D" uid="uid://b8vcu3wxjkwp4" path="res://assets/backgrounds/texas.png" id="7_y2txe"]
[ext_resource type="Texture2D" uid="uid://bbk5bf4ajmy8h" path="res://assets/backgrounds/plohand.png" id="8_g0cry"]
[ext_resource type="Script" path="res://scripts/JackpotSNGPanel.gd" id="8_g406a"]
[ext_resource type="Texture2D" uid="uid://dka3xhlnye3jo" path="res://assets/backgrounds/jackpotsng.png" id="10_4ifol"]
[ext_resource type="Texture2D" uid="uid://biabjtmd03jjt" path="res://assets/backgrounds/mtt_win.png" id="11_8gii4"]
[ext_resource type="PackedScene" uid="uid://dxutx12jcfnoq" path="res://scenes/TableGamePanel.tscn" id="11_d7isi"]
[ext_resource type="Texture2D" uid="uid://ebxpcx8h4mpn" path="res://assets/ui/AvatarPanelBorder.png" id="13_lfw53"]
[ext_resource type="Texture2D" uid="uid://bkntnbcqk57kv" path="res://assets/ui/ChipBalanceBorder.png" id="14_e6dde"]
[ext_resource type="FontFile" uid="uid://dda1o18i4ik7k" path="res://assets/fonts/Flexi_IBM_VGA_True_437.ttf" id="14_r0i3f"]
[ext_resource type="PackedScene" uid="uid://bqybiqexsjp8u" path="res://scenes/BookButton.tscn" id="15_pe52p"]
[ext_resource type="Texture2D" uid="uid://b6mrvhlo4ocop" path="res://assets/backgrounds/50sale.png" id="18_mlnvp"]
[ext_resource type="Texture2D" uid="uid://csav2yaq2kxsc" path="res://assets/ui/ld-hamburger-menu 1.png" id="20_t1ck3"]
[ext_resource type="Texture2D" uid="uid://cs7jebh8ci8ig" path="res://assets/ui/Line 19.png" id="21_o2xmf"]
[ext_resource type="Texture2D" uid="uid://kvsv7ex7npg6" path="res://assets/ui/Rectangle 477.png" id="22_14dou"]
[ext_resource type="Texture2D" uid="uid://dq3rywfowqyi6" path="res://assets/ui/ComputerButton.png" id="24_24blj"]
[ext_resource type="Texture2D" uid="uid://bborttyr6nd4a" path="res://assets/ui/PagerButton.png" id="25_ol7wc"]

[sub_resource type="Theme" id="Theme_xfsp1"]
default_font = ExtResource("1_s3xu5")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fah8o"]
bg_color = Color(0.0392157, 0.0156863, 0.129412, 1)
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Theme" id="Theme_yv0ju"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r263d"]
bg_color = Color(0.101961, 0.0784314, 0.137255, 1)
border_width_bottom = 5
border_color = Color(0.101961, 0.0784314, 0.137255, 1)
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Theme" id="Theme_aq7gp"]
Label/styles/normal = SubResource("StyleBoxFlat_r263d")

[node name="MainHub" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_xfsp1")
script = ExtResource("1_svit3")

[node name="AvatarViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(128, 128)

[node name="AvatarScene" parent="AvatarViewport" instance=ExtResource("6_fa6iq")]
custom_minimum_size = Vector2(128, 128)
offset_left = 74.0
offset_top = 74.0
offset_right = 148.0
offset_bottom = 148.0

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.270588, 0.258824, 1)

[node name="GameSelectionArea" type="Panel" parent="."]
custom_minimum_size = Vector2(786, 272)
layout_mode = 0
offset_left = 306.0
offset_top = 110.0
offset_right = 1092.0
offset_bottom = 382.0

[node name="GameTypeButtons" type="HBoxContainer" parent="GameSelectionArea"]
custom_minimum_size = Vector2(132, 0)
layout_mode = 0
offset_top = -46.0
offset_right = 420.0
offset_bottom = -14.0
theme_override_constants/separation = 10

[node name="PokerButton" type="Button" parent="GameSelectionArea/GameTypeButtons"]
custom_minimum_size = Vector2(132, 32)
layout_mode = 2
theme = ExtResource("4_pb4yn")
theme_override_colors/font_color = Color(0.921569, 0.921569, 0.921569, 1)
text = "Poker"

[node name="TableGamesButton" type="Button" parent="GameSelectionArea/GameTypeButtons"]
custom_minimum_size = Vector2(132, 32)
layout_mode = 2
theme = ExtResource("4_pb4yn")
theme_override_colors/font_color = Color(0.921569, 0.921569, 0.921569, 1)
text = "Table Games"

[node name="SportsBettingButton" type="Button" parent="GameSelectionArea/GameTypeButtons"]
custom_minimum_size = Vector2(132, 32)
layout_mode = 2
theme = ExtResource("4_pb4yn")
theme_override_colors/font_color = Color(0.921569, 0.921569, 0.921569, 1)
text = "Sports Betting"

[node name="GamePanels" type="HBoxContainer" parent="GameSelectionArea"]
custom_minimum_size = Vector2(638, 0)
layout_mode = 1
offset_right = 728.0
offset_bottom = 272.0
theme_override_constants/separation = 8

[node name="NLHoldemPanel" parent="GameSelectionArea/GamePanels" instance=ExtResource("7_3mdhe")]
layout_mode = 2

[node name="TextureRect2" type="TextureRect" parent="GameSelectionArea/GamePanels/NLHoldemPanel"]
visible = false
custom_minimum_size = Vector2(160, 120)
layout_mode = 0
offset_left = 8.0
offset_top = 86.0
offset_right = 168.0
offset_bottom = 206.0
texture = ExtResource("7_y2txe")
expand_mode = 1

[node name="PLOmahaPanel" parent="GameSelectionArea/GamePanels" instance=ExtResource("7_3mdhe")]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="GameSelectionArea/GamePanels/PLOmahaPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = 80.0
offset_right = 10.0
offset_bottom = 80.0
texture = ExtResource("8_g0cry")
expand_mode = 1

[node name="JackpotSNGPanel" parent="GameSelectionArea/GamePanels" instance=ExtResource("7_3mdhe")]
layout_mode = 2
script = ExtResource("8_g406a")

[node name="UnregisterButton" type="Button" parent="GameSelectionArea/GamePanels/JackpotSNGPanel"]
custom_minimum_size = Vector2(160, 50)
layout_mode = 0
offset_left = 8.0
offset_top = 214.0
offset_right = 168.0
offset_bottom = 264.0
text = "Unregister"

[node name="RegistrationTimer" type="Timer" parent="GameSelectionArea/GamePanels/JackpotSNGPanel"]

[node name="StatusLabel" type="Label" parent="GameSelectionArea/GamePanels/JackpotSNGPanel"]
layout_mode = 0
offset_right = 1.0
offset_bottom = 17.0
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="GameSelectionArea/GamePanels/JackpotSNGPanel"]
layout_mode = 0
texture = ExtResource("10_4ifol")
expand_mode = 1

[node name="MTTPanel" parent="GameSelectionArea/GamePanels" instance=ExtResource("7_3mdhe")]
layout_mode = 2

[node name="TextureRect2" type="TextureRect" parent="GameSelectionArea/GamePanels/MTTPanel"]
layout_mode = 0
texture = ExtResource("11_8gii4")
expand_mode = 1

[node name="TableGamesPanels" type="HBoxContainer" parent="GameSelectionArea"]
custom_minimum_size = Vector2(728, 272)
layout_mode = 1
offset_right = 728.0
offset_bottom = 272.0

[node name="BlackjackPanel" parent="GameSelectionArea/TableGamesPanels" instance=ExtResource("11_d7isi")]
layout_mode = 2

[node name="RoulettePanel" parent="GameSelectionArea/TableGamesPanels" instance=ExtResource("11_d7isi")]
layout_mode = 2

[node name="CrapsPanel" parent="GameSelectionArea/TableGamesPanels" instance=ExtResource("11_d7isi")]
layout_mode = 2

[node name="GameTypeSelection" type="OptionButton" parent="GameSelectionArea"]
visible = false
layout_mode = 0
offset_right = 32.0
offset_bottom = 20.0

[node name="StakeSelection" type="OptionButton" parent="GameSelectionArea"]
visible = false
layout_mode = 0
offset_right = 32.0
offset_bottom = 20.0

[node name="PlayerPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(230, 320)
layout_mode = 0
offset_left = 44.0
offset_top = 64.0
offset_right = 274.0
offset_bottom = 384.0
theme = ExtResource("4_pb4yn")
theme_override_styles/panel = SubResource("StyleBoxFlat_fah8o")

[node name="AvatarPanelBorder" type="TextureRect" parent="PlayerPanel"]
visible = false
layout_mode = 0
offset_right = 81.0
offset_bottom = 81.0
texture = ExtResource("13_lfw53")

[node name="AvatarDisplay" type="TextureRect" parent="PlayerPanel"]
clip_contents = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 0
offset_left = 51.0
offset_top = 9.0
offset_right = 179.0
offset_bottom = 137.0
expand_mode = 1
stretch_mode = 6

[node name="PlayerName" type="Label" parent="PlayerPanel"]
custom_minimum_size = Vector2(174, 34)
layout_mode = 0
offset_left = 15.0
offset_top = 207.0
offset_right = 215.0
offset_bottom = 241.0
theme = ExtResource("5_utarw")
theme_override_colors/font_color = Color(0, 0.270588, 0.258824, 1)
theme_override_fonts/font = ExtResource("1_s3xu5")
text = "Player 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CustomizeAvatarButton" type="Button" parent="PlayerPanel"]
custom_minimum_size = Vector2(132, 32)
layout_mode = 0
offset_left = 52.0
offset_top = 280.0
offset_right = 184.0
offset_bottom = 312.0
theme = ExtResource("4_pb4yn")
text = "Edit Profile"
autowrap_mode = 3

[node name="DailyActionButton" type="Button" parent="PlayerPanel"]
custom_minimum_size = Vector2(132, 32)
layout_mode = 0
offset_left = 262.0
offset_top = -48.0
offset_right = 394.0
offset_bottom = -16.0
theme = ExtResource("4_pb4yn")
text = "Daily Action"
autowrap_mode = 3

[node name="UserProfileButton" type="Button" parent="PlayerPanel"]
visible = false
custom_minimum_size = Vector2(400, 60)
layout_mode = 0
offset_top = 760.0
offset_right = 360.0
offset_bottom = 820.0
theme = ExtResource("4_pb4yn")
text = "User Settings"

[node name="PlayerPanel2" type="Panel" parent="."]
layout_mode = 0

[node name="ChipBalanceDisplay" type="Label" parent="PlayerPanel2"]
custom_minimum_size = Vector2(60, 20)
layout_mode = 0
offset_left = 85.0
offset_top = 304.0
offset_right = 255.0
offset_bottom = 324.0
theme = ExtResource("5_utarw")
theme_override_fonts/font = ExtResource("14_r0i3f")
theme_override_font_sizes/font_size = 16
text = "1,000,000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GemBalanceDisplay" type="Label" parent="PlayerPanel2"]
custom_minimum_size = Vector2(80, 20)
layout_mode = 0
offset_left = 80.0
offset_top = 323.0
offset_right = 250.0
offset_bottom = 343.0
theme = ExtResource("5_utarw")
theme_override_fonts/font = ExtResource("14_r0i3f")
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChipBalanceBorder" type="TextureRect" parent="PlayerPanel2"]
custom_minimum_size = Vector2(192, 21)
layout_mode = 0
offset_left = 64.0
offset_top = 304.0
offset_right = 179.0
offset_bottom = 325.0
texture = ExtResource("14_e6dde")
expand_mode = 1

[node name="FlashBalanceBorder" type="TextureRect" parent="PlayerPanel2"]
custom_minimum_size = Vector2(115, 21)
layout_mode = 0
offset_left = 64.0
offset_top = 323.0
offset_right = 256.0
offset_bottom = 344.0
texture = ExtResource("14_e6dde")
expand_mode = 1

[node name="BookButton" parent="PlayerPanel2" instance=ExtResource("15_pe52p")]
offset_left = 93.0
offset_top = 64.0
offset_right = 225.0
offset_bottom = 96.0

[node name="ProfileDisplay" type="Control" parent="."]
anchors_preset = 0

[node name="AvatarButton" type="TextureButton" parent="ProfileDisplay"]
layout_mode = 0
ignore_texture_size = true
stretch_mode = 0

[node name="HelpButton" type="Button" parent="."]
visible = false
custom_minimum_size = Vector2(395, 60)
layout_mode = 0
offset_left = 440.0
offset_top = 30.0
offset_right = 780.0
offset_bottom = 90.0
theme = ExtResource("4_pb4yn")
text = "Help/ Support"

[node name="FriendsButton" type="Button" parent="."]
visible = false
custom_minimum_size = Vector2(395, 60)
layout_mode = 0
offset_left = 845.0
offset_top = 30.0
offset_right = 1240.0
offset_bottom = 90.0
theme = ExtResource("4_pb4yn")
text = "Friends"

[node name="PurchaseChipsButton" type="Button" parent="."]
custom_minimum_size = Vector2(132, 32)
layout_mode = 0
offset_left = 448.0
offset_top = 16.0
offset_right = 580.0
offset_bottom = 48.0
theme = ExtResource("4_yfthd")
text = "GET CHIPS"

[node name="EngagementFeaturesButton" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="LogoutButton" type="Button" parent="."]
visible = false
custom_minimum_size = Vector2(120, 60)
layout_mode = 0
offset_left = 1440.0
offset_top = 1020.0
offset_right = 1560.0
offset_bottom = 1080.0
theme = ExtResource("4_pb4yn")
theme_override_fonts/font = ExtResource("7_30cts")
text = "Logout
"

[node name="TestAPIButton" type="Button" parent="."]
visible = false
custom_minimum_size = Vector2(120, 60)
layout_mode = 0
offset_left = 1720.0
offset_top = 1000.0
offset_right = 1861.0
offset_bottom = 1060.0
theme = ExtResource("6_4fhbl")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Test API Endpoints"

[node name="PromoImage" type="TextureRect" parent="."]
visible = false
custom_minimum_size = Vector2(820, 210)
layout_mode = 0
offset_left = 440.0
offset_top = 30.0
offset_right = 1260.0
offset_bottom = 240.0
theme = SubResource("Theme_yv0ju")
texture = ExtResource("18_mlnvp")
expand_mode = 1

[node name="Border" type="Label" parent="PromoImage"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 0
offset_top = 195.0
offset_right = 820.0
offset_bottom = 220.0
theme = SubResource("Theme_aq7gp")

[node name="PokerTestButton" type="Button" parent="."]
custom_minimum_size = Vector2(200, 60)
layout_mode = 0
offset_left = 48.0
offset_top = 960.0
offset_right = 164.0
offset_bottom = 990.0
text = "Poker Test"

[node name="BurgerMenu" type="TextureRect" parent="."]
custom_minimum_size = Vector2(45, 28)
layout_mode = 0
offset_left = 44.0
offset_top = 17.0
offset_right = 89.0
offset_bottom = 45.0
texture = ExtResource("20_t1ck3")
expand_mode = 1

[node name="TitleLabel" type="Label" parent="."]
custom_minimum_size = Vector2(77, 14)
layout_mode = 0
offset_left = 112.0
offset_top = 10.0
offset_right = 189.0
offset_bottom = 37.0
theme_override_font_sizes/font_size = 20
text = "Lobby"

[node name="TitleLine" type="TextureRect" parent="."]
custom_minimum_size = Vector2(162, 1)
layout_mode = 0
offset_left = 112.0
offset_top = 40.0
offset_right = 274.0
offset_bottom = 41.0
texture = ExtResource("21_o2xmf")
expand_mode = 1

[node name="PagerPanel" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 674.0
offset_right = 874.0
offset_bottom = 54.0
texture = ExtResource("22_14dou")

[node name="ComputerButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 0
offset_left = 798.0
offset_top = 16.0
offset_right = 830.0
offset_bottom = 48.0
texture_normal = ExtResource("24_24blj")

[node name="PagerButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 0
offset_left = 684.0
offset_top = 16.0
offset_right = 784.0
offset_bottom = 48.0
texture_normal = ExtResource("25_ol7wc")

[connection signal="pressed" from="PlayerPanel/DailyActionButton" to="." method="_on_daily_action_button_pressed"]
